2009-06-07  Tyler Romeo  <tylerromeo@gmail.com>

	*acctshell.py: Fixed loop to exit admin menu correctly.
	Request creation and deletion work correctly. Admin menu being tested.

	*app/controllers.py (AdminPanel.handleRequest): Fixed paramters passed to Request object.
	*app/models.py (Request.approve): Removed unnecessary option on useradd command.

	*app/views/AdminPanel.py (AdminPanel_MainMenu): Fixed paramters problem with views.
	*app/views/AdminPanel.py (Request_List): Added definition for key variable.
	Listing requests from database works correctly.	

2009-05-20  Tyler Romeo  <tylerromeo@gmail.com>

	*acctshell.py: Updated startup script with new functionality.
	Added AdminPanel views and controllers (no password protection yet!).

	*app/views/AccountShell.py: Changed function name to avoid collisions.
	*app/controllers.py (AccountShell.getMenuChoice): Remove useless function.

	*app/models.py (Request.checkPassword): Added check for error if passowrd is blank.
	*app/views/AccountShell.py: Added ClearScreen() function for all views.

2009-05-07  Tyler Romeo  <tylerromeo@gmail.com>

	*acctshell.py: Startup script updated. Account shell starts up and stores requests.
	*app/controllers.py (AccountShell.handleRequest): Fixed variable name issue.

	*app/models.py (Request.getInfo): Added configuration option to allow/disallow retrieval of password from Request object.

2009-05-06  Tyler Romeo  <tylerromeo@gmail.com>

	*app/models.py (Database.updateFromFile): Fixed variable names in function.
	*app/models.py (Request.updateToDatabase): Object now creates new database line for new request rather than changing a nonexistent one.
	*app/models.py (Request.updateFromDatabase): Fixed variable names.
	Account shell successfully creates, stores, and recalls requests (still bug with incorrect passwords).

	Fixed various syntax errors.

2009-04-13  Tyler Romeo  <tylerromeo@gmail.com>

	*app/bootstrap.py: Fixed module names due to new directory structure.
